# fs-tool

./: .gitignore  README.md  pyproject.toml  setup.cfg
fs_tool/: aws_helper.py  cli.py  processing_script.py
fs_tool/dsl/: compilation.py
fs_tool/dsl/operations/: base.py  operations.py  utils.py
