[tool.poetry]
name = "fs-tool"
version = "0.1.0"
description = ""
authors = ["Marcos-Miranda <markinn_mn@hotmail.com>"]
readme = "README.md"
packages = [{include = "fs_tool"}]

[tool.poetry.dependencies]
python = "^3.8.1"
pyyaml = "5.4.1"
awswrangler = "^3.0.0"
sagemaker = "^2.148.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.2.0"
black = "^23.3.0"
ipykernel = "^6.22.0"

[tool.black]
line-length = 119

[tool.poetry.scripts]
fstool = "fs_tool.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
